--- a/src/main/resources/templates/HptReception/HptReceptionList.html
+++ b/src/main/resources/templates/HptReception/HptReceptionList.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layouts/layout}">
 
 <head>
     <meta charset="UTF-8">
@@ -10,43 +12,45 @@
 </head>
 
 <body>
-<div class="container">
-    <h1>접수내역 확인</h1>
-    <div class="counter">
-        <span class="counter-label">실시간 대기자수:</span>
-        <span class="counter-value" th:text="${rtCount != null ? rtCount : ''}"></span>
-        <button class="counter-btn" id="add-btn" th:onclick="'javascript: {addCounter()} '">+1</button>&nbsp;&nbsp;&nbsp;
-        <button class="counter-btn" id="sub-btn" th:onclick="'javascript: {subCounter()} '" th:disabled="${isDisabled}">-1</button>
+<div layout:fragment="content">
+    <div class="container">
+        <h1>접수내역 확인</h1>
+        <div class="counter">
+            <span class="counter-label">실시간 대기자수:</span>
+            <span class="counter-value" th:text="${rtCount != null ? rtCount : ''}"></span>
+            <button class="counter-btn" id="add-btn" th:onclick="'javascript: {addCounter()} '">+1</button>&nbsp;&nbsp;&nbsp;
+            <button class="counter-btn" id="sub-btn" th:onclick="'javascript: {subCounter()} '" th:disabled="${isDisabled}">-1</button>
+        </div>
+        <table>
+            <thead>
+            <tr>
+                <th>No</th>
+                <th>환아명</th>
+                <th>진료항목</th>
+                <th>접수일시</th>
+                <th>상태</th>
+                <th>비고</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="hptReception : ${hptReceptionList}">
+                <td th:text="${hptReception.resNo}"></td>
+                <td th:text="${hptReception.pName}"></td>
+                <td th:text="${hptReception.txList}"></td>
+                <td th:text="${#temporals.format(hptReception.rDate, 'yy/MM/dd HH:mm:ss')}"></td>
+                <td th:text="${hptReception.currentStatus}"></td>
+                <td>
+                    <a th:if="${hptReception.currentStatus == '접수대기'}"
+                       th:href="@{/HptReception/HptReceptionList/updateCurrentStatus(resNo=${hptReception.resNo})}"
+                       th:method="post"
+                       onclick="acceptReception()">접수</a>
+                    <a th:if="${hptReception.currentStatus == '접수대기'}" th:href="@{/HptReception/reject/{resNo}(resNo=${hptReception.resNo})}">거절</a>
+                    <a th:if="${hptReception.currentStatus == '진료 전'}" th:href="@{/HptReception/complete/{resNo}(resNo=${hptReception.resNo})}" th:onclick="'javascript: {complete(${hptReception.resNo})}';">진료완료</a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-    <table>
-        <thead>
-        <tr>
-            <th>No</th>
-            <th>환아명</th>
-            <th>진료항목</th>
-            <th>접수일시</th>
-            <th>상태</th>
-            <th>비고</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="hptReception : ${hptReceptionList}">
-            <td th:text="${hptReception.resNo}"></td>
-            <td th:text="${hptReception.pName}"></td>
-            <td th:text="${hptReception.txList}"></td>
-            <td th:text="${#temporals.format(hptReception.rDate, 'yy/MM/dd HH:mm:ss')}"></td>
-            <td th:text="${hptReception.currentStatus}"></td>
-            <td>
-                <a th:if="${hptReception.currentStatus == '접수대기'}"
-                   th:href="@{/HptReception/HptReceptionList/updateCurrentStatus(resNo=${hptReception.resNo})}"
-                   th:method="post"
-                   onclick="acceptReception()">접수</a>
-                <a th:if="${hptReception.currentStatus == '접수대기'}" th:href="@{/HptReception/reject/{resNo}(resNo=${hptReception.resNo})}">거절</a>
-                <a th:if="${hptReception.currentStatus == '진료 전'}" th:href="@{/HptReception/complete/{resNo}(resNo=${hptReception.resNo})}" th:onclick="'javascript: {complete(${hptReception.resNo})}';">진료완료</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
 </div>
 </body>
 </html>
