--- a/src/main/resources/templates/checkPassword.html
+++ b/src/main/resources/templates/checkPassword.html
@@ -5,7 +5,7 @@
     <title>i : Heal Me 마이페이지</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/Signup.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/signup.css">
 </head>
 
 <body>
