--- a/src/main/resources/templates/signupuser.html
+++ b/src/main/resources/templates/signupuser.html
@@ -4,34 +4,101 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>i : Heal Me 회원가입</title>
+    <title>i : Heal Me</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/Signup.css">
 </head>
+
+<style>
+    .container {
+        padding-top: 3%;
+        margin: auto;
+    }
+
+    .head {
+        font-weight: bold;
+        display: inline;
+    }
+
+    .buttons {
+        float: right;
+        justify-content: flex-end;
+    }
+
+    .btn-secondary {
+        background-color: skyblue;
+        border: none;
+    }
+
+    .btn-secondary:hover {
+        background-color: steelblue;
+    }
+
+    .form-control {
+        width: 900px;
+        resize: none;
+        border-color: darkgray;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .col {
+        flex: 1;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+    }
+
+    .co2 {
+        flex: 1;
+        padding: 10px;
+        display: flex;
+        align-items: normal;
+    }
+
+    h5 {
+        margin: 0;
+        font-size: 1.5rem;
+    }
+</style>
 
 <body>
     <div class="container">
-        <form>
+        <form action="join" method="post">
             <h2 class="head">유저 회원가입</h2>
             <hr>
             <div class="row">
                 <div class="col">
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;이름</h5>
-                    <div class="col2">
-                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;방기웅            // 가져와야 함
-                    </div>
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" name="title" placeholder="이름 입력">
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;이메일</h5>
-                    <div class="col2">
-                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;bgw6713@naver.com            // 가져와야 함
+            <form action="emailchk" method="post">
+                <div class="row">
+                    <div class="col">
+                        <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;이메일</h5>
+                    </div>
+                    <div class="col">
+                        <div class="input-group">
+                            <div class="size">
+                                <input type="email" class="form-control" name="title" placeholder="이메일 입력">
+                                &emsp;
+                            </div>
+                            <div class="input-group-append">
+                                <button type="submit" class="btn btn-secondary btn-md">중복검사</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </form>
 
             <div class="row">
                 <div class="col">
@@ -45,19 +112,23 @@
             <div class="row">
                 <div class="col">
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;생년월일</h5>
-                    <div class="col2">
-                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;0000-00-00            // 가져와야 함
-                    </div>
+                </div>
+                <div class="col">
+                    <input type="number" class="form-control" name="title" placeholder="생년월일 입력(ex.20020625)">
+                </div>
             </div>
 
             <div class="row">
                 <div class="col">
                     <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;성별</h5>
-                    <div class="col2">
-                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;&nbsp;&nbsp;&nbsp;남            // 가져와야 함
-                    </div>
                 </div>
-
+                <div class="col">
+                    <select class="form-control" name="title">
+                        <option value="" disabled selected>여기를 클릭하세요.</option>
+                        <option value="1">남자</option>
+                        <option value="2">여자</option>
+                    </select>
+                </div>
             </div>
 
             <div class="row">
@@ -80,7 +151,7 @@
 
             <div class="row">
                 <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;비밀번호 질문</h5>
+                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;보안 질문</h5>
                 </div>
                 <div class="col">
                     <select class="form-control" name="title">
@@ -94,7 +165,7 @@
 
             <div class="row">
                 <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;질문 답</h5>
+                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;답변</h5>
                 </div>
                 <div class="col">
                     <input type="text" class="form-control" name="title" placeholder="질문 답 입력">
