--- a/src/main/resources/templates/updateUser.html
+++ b/src/main/resources/templates/updateUser.html
@@ -1,45 +1,63 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>i : Heal Me 마이페이지</title>
+    <title>i : Heal Me 회원가입</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/Signup.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/signup.css">
 </head>
 
 <body>
     <div class="container">
         <form>
-            <h2 class="head">내 정보 수정</h2>
+            <h2 class="head">유저 회원가입</h2>
             <hr>
             <div class="row">
                 <div class="col">
-                    <h5>로그인 정보&emsp;&emsp;|&emsp;&emsp;대표 이름</h5>
+                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;이름</h5>
                     <div class="col2">
-                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;방기웅            // 가져와야 함
+                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;방기웅            // 가져와야 함
                     </div>
                 </div>
-
             </div>
 
             <div class="row">
                 <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;대표 이메일</h5>
+                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;이메일</h5>
                     <div class="col2">
-                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;bgw6713@naver.com            // 가져와야 함
+                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;bgw6713@naver.com            // 가져와야 함
                     </div>
                 </div>
-
             </div>
 
             <div class="row">
                 <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;대표 연락처</h5>
+                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;연락처</h5>
                 </div>
                 <div class="col">
                     <input type="number" class="form-control" name="title" placeholder="연락처 입력(하이픈(-) 제외)">
                 </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;생년월일</h5>
+                    <div class="col2">
+                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;0000-00-00            // 가져와야 함
+                    </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;성별</h5>
+                    <div class="col2">
+                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;&nbsp;&nbsp;&nbsp;남            // 가져와야 함
+                    </div>
+                </div>
+
             </div>
 
             <div class="row">
@@ -83,47 +101,9 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col">
-                    <h5>병원 정보&ensp;&emsp;&emsp;|&emsp;&emsp;&nbsp;사업자번호</h5>
-                    <div class="col2">
-                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;123-45-12345            // 가져와야 함
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;병원명</h5>
-                </div>
-                <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="병원명 입력 (사업자등록증과 동일하게 작성)">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;병원 주소</h5>
-                </div>
-                <div class="col">
-                    <input type="text" class="form-control" name="title" placeholder="병원 주소 입력 (사업자등록증과 동일하게 작성)">
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <h5>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;&nbsp;병원 전화번호</h5>
-                </div>
-                <div class="col">
-                    <input type="number" class="form-control" name="title" placeholder="병원 전화번호 입력(하이픈(-) 제외)">
-                </div>
-            </div>
-
             <div class="buttons">
-                <button type="submit" class="btn btn-secondary btn-lg">수정하기</button>
+                <button type="submit" class="btn btn-secondary btn-lg">회원가입</button>
             </div>
-
         </form>
     </div>
 </body>
