--- a/src/main/resources/templates/community/posts.html
+++ b/src/main/resources/templates/community/posts.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>커뮤니티</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/community/posts.css}" href="../../css/community/posts.css">
     <link rel="stylesheet" th:href="@{/css/community/common.css}" href="../../css/community/common.css">
 </head>
@@ -12,73 +12,72 @@
 <div class="container">
     <table class="table table-striped">
         <thead>
-            <tr>
-                <th>No</th>
-                <th>병원명</th>
-                <th>제목</th>
-                <th>작성자</th>
-                <th>등록일</th>
-                <th>조회수</th>
-            </tr>
+        <tr>
+            <th>No</th>
+            <th>병원명</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>등록일</th>
+            <th>조회수</th>
+        </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>4</td>
-                <td>김진우소아청소년과의원</td>
-                <td>여기 별로인듯..?[3]</td>
-                <td>har***</td>
-                <td>2023.04.25</td>
-                <td>50</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>새롬소아청소년과의원</td>
-                <td>여기 별로에요[2]</td>
-                <td>har***</td>
-                <td>2023.04.23</td>
-                <td>22</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>새롬소아청소년과의원</td>
-                <td>여기 추천합니다![7]</td>
-                <td>har***</td>
-                <td>2023.04.20</td>
-                <td>234</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>새롬소아청소년과의원</td>
-                <td>의사가 친절해요!</td>
-                <td>long***</td>
-                <td>2023.04.04</td>
-                <td>567</td>
-            </tr>
+        <tr th:each="dto : ${result.dtoList}">
+            <td th:text="${dto.postNo}">게시글 번호</td>
+            <td th:text="${dto.hptName}">병원명</td>
+            <td><a href="post.html"
+                   th:href="@{/community/{postNo}(postNo=${dto.postNo},page=${postPageRequestDTO.page},type=${postPageRequestDTO.type},keyword=${postPageRequestDTO.keyword})}"
+                   th:text="${dto.title}">제목</a>
+                <span th:text="|[${dto.commentCount}]|" style="color: red">[댓글수]</span>
+            </td>
+            <td th:text="${dto.userEmail}">작성자 이메일</td>
+            <td th:text="${#temporals.format(dto.regDate, 'yyyy/MM/dd')}">작성일</td>
+            <td th:text="${dto.hit}">조회수</td>
+        </tr>
         </tbody>
     </table>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">이전</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">다음</a>
-            </li>
-        </ul>
-    </nav>
+
+    <!-- 페이징 -->
+    <ul class="pagination h-100 justify-content-center align-items-center">
+        <li class="page-item" th:if="${result.prev}">
+            <a class="page-link"
+               th:href="@{/community(page=${result.start - 1},
+                   type=${postPageRequestDTO.type},
+                   keyword=${postPageRequestDTO.keyword})}" tabindex="-1">이전</a>
+        </li>
+
+        <li th:class="'page-item ' + ${result.currentPage == page ? 'active' : ''}"
+            th:each="page : ${result.pageList}">
+            <a class="page-link"
+               th:href="@{/community(page=${page},
+                   type=${postPageRequestDTO.type},
+                   keyword=${postPageRequestDTO.keyword})}">
+                [[${page}]]
+            </a>
+        </li>
+
+        <li class="page-item" th:if="${result.next}">
+            <a class="page-link"
+               th:href="@{/community(page = ${result.end + 1},
+                   type=${postPageRequestDTO.type},
+                   keyword=${postPageRequestDTO.keyword})}">다음</a>
+        </li>
+    </ul>
+    <!-- 페이징 -->
+
+    <!-- 검색 -->
     <form>
-        <select class="form-select" aria-label="Default select example">
-            <option selected>전체</option>
-            <option value="1">병원명</option>
-            <option value="2">제목</option>
-            <option value="3">작성자</option>
+        <input type="hidden" name="page" value="1">
+        <select class="form-select" aria-label="Default select example" name="type">
+            <!--<option value="" th:selected="${postPageRequestDTO.type == null}">&#45;&#45;&#45;&#45;&#45;&#45;</option>-->
+            <option value="h" th:selected="${postPageRequestDTO.type == 'h' || postPageRequestDTO.type == null}">병원명</option>
+            <option value="t" th:selected="${postPageRequestDTO.type == 't'}">제목</option>
+            <option value="u" th:selected="${postPageRequestDTO.type == 'u'}">작성자</option>
         </select>
-        <input type="text" class="form-control" placeholder="검색어를 입력하세요.">
+        <input type="text" class="form-control" name="keyword" th:value="${postPageRequestDTO.keyword}" placeholder="검색어를 입력하세요.">
         <button type="submit" class="btn btn-secondary btn-sm">검색하기</button>
     </form>
+    <!-- 검색 -->
 </div>
 </body>
 </html>
